[package]
name = "vercel-axum-lite"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vercel_runtime = { version = "1" }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "events"
path = "api/events.rs"

[[bin]]
name = "contact"
path = "api/contact.rs"